# treinos-semanais

./: LICENSE  Makefile  README.md  pyproject.toml
src/training_exercises/: ex_03_project_euler_2.py  ex_08_exercism_space_age.py  ex_09_project_euler_5.py  ex_0_.py  ex_10_exercism_gigasecond.py  ex_11_project_euler_6.py  ex_12_exercism_pig_latim.py  ex_13_project_euler_7.py  ex_14_exercism_matching_brackets.py  ex_15_project_euler_8.py  ex_16_exercism_diamond.py  ex_19_project_euler_9.py  (+37 more)
tests/: test_ex_00_project_euler_0.py  test_ex_01_project_euler_1.py  test_ex_02_exercism_grade_school.py  test_ex_03_project_euler_2.py  test_ex_04_exercism_rotational_cypher.py  test_ex_05_project_euler_3.py  test_ex_06_exercism_list_ops.py  test_ex_07_project_euler_4.py  test_ex_08_exercism_space_age.py  test_ex_09_project_euler_5.py  test_ex_0_project_euler_0.py  test_ex_10_exercism_gigasecond.py  test_ex_11_project_euler_6.py  test_ex_12_exercism_pig_latim.py  test_ex_13_project_euler_7.py  test_ex_14_exercism_matching_brackets.py  test_ex_15_project_euler_8.py  test_ex_16_exercism_diamond.py  test_ex_17_exercism_complex_numbers.py  test_ex_18_exercism_rational_number.py  test_ex_19_project_euler_9.py  test_ex_1_project_euler_1.py  test_ex_20_exercism_prime_factors.py  test_ex_21_project_euler_10.py  test_ex_22_exercism_say.py  test_ex_23_project_euler_11.py  test_ex_24_exercism_acronym.py  test_ex_25_project_euler_12.py  test_ex_26_exercism_series.py  test_ex_27_project_euler_13.py  test_ex_28_exercism_roman_numerals.py  test_ex_29_project_euler_14.py  test_ex_2_exercism_gade_school.py  test_ex_2_exercism_grade_school.py  test_ex_30_exercism_phone_number.py  test_ex_31_project_euler_15.py  test_ex_32_exercism_hamming_distance.py  test_ex_33_project_euler_16.py  test_ex_34_exercism_simple_cipher.py  test_ex_35_project_euler_17.py  (+19 more)
(+2 files in other folders)
